--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 .main{
     margin: auto;
-    width:70%;
+    width:400px;
     text-align: center;
     justify-content: center;
     background:linear-gradient(135deg, #5afad8,#fc67d2) ;
